monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4059/A4059b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4059;

grammar A4059b {

  A = token("-") ;

}
